tests/semantic/valid/nested_blocks.mc
int root = 1;
{
    bool flag = true;
    {
        float value = root + 1.5;
        print value;
    }
    print flag;
}
print root;
