tests/semantic/invalid/invalid_arithmetic.mc
bool flag = true;
int value = 0;
value = flag + 1;
